feat: add about-us list with members

--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -70,6 +70,7 @@ $font-logo: 400 26px/0.92 $font-family-gloock;
 $font-button: 700 15px/1.5 $font-family-jakarta;
 $font-label: 600 15px/1.5 $font-family-jakarta;
 $font-xs: 600 12px/1.5 $font-family-jakarta;
+$font-about-label: 700 11px/1.2 $font-family-jakarta;
 
 @mixin font-h1 {
   font: 400 60px/1.2 $font-family-gloock;
