--- a/src/pages/about-us-page/about-us-page.scss
+++ b/src/pages/about-us-page/about-us-page.scss
@@ -1,1 +1,25 @@
-// .about-us-page {}
+.about-us-page {
+  &__container {
+    @include container;
+  }
+
+  &__title {
+    @include font-h1;
+
+    @include small-mobile {
+      font-size: 24px;
+    }
+  }
+
+  &__subtitle {
+    @include font-h1;
+
+    @include small-mobile {
+      font-size: 24px;
+    }
+
+    & span {
+      color: $color-logo;
+    }
+  }
+}
