--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -9,6 +9,10 @@
     @include pre-tablet {
       grid-template-columns: repeat(1, 1fr);
     }
+
+    @include mobile {
+      margin: 30px 0 60px 0;
+    }
   }
 
   &-member {
@@ -141,6 +145,88 @@
         @include small-mobile {
           font-size: 14px;
           margin-bottom: 4px;
+        }
+      }
+    }
+  }
+
+  &-collaboration {
+    padding-top: 92px;
+    margin-bottom: 104px;
+    border-top: 1px solid rgba($color-primary, 0.12);
+
+    @include mobile {
+      padding-top: 60px;
+      margin-bottom: 60px;
+    }
+
+    &__title {
+      @include font-h1;
+    }
+
+    &__blockquote {
+      margin-top: 24px;
+      width: fit-content;
+      padding: 16px;
+      background: rgba($color-button, 0.2);
+      border-radius: 5px;
+
+      & p {
+        font-size: 20px;
+        font-weight: 600;
+
+        @include small-mobile {
+          font-size: 16px;
+        }
+      }
+
+      & footer {
+        text-align: right;
+      }
+    }
+  }
+
+  &-methods {
+    margin-top: 48px;
+
+    &__title {
+      @include font-h4;
+    }
+
+    &__list {
+      margin-top: 16px;
+    }
+
+    &-item {
+      display: flex;
+      margin-bottom: 24px;
+
+      &__index {
+        margin-right: 20px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        min-width: 40px;
+        height: 40px;
+        border-radius: 100%;
+        background: rgba($color-rating, 0.5);
+      }
+
+      &__title {
+        font: $font-button;
+        font-size: 18px;
+        margin-bottom: 2px;
+
+        @include small-mobile {
+          font-size: 16px;
+          margin-bottom: 6px;
+        }
+      }
+
+      &__descr {
+        max-width: 1000px;
+        @include small-mobile {
+          font-size: 14px;
         }
       }
     }
