--- a/src/pages/basket-page/basket-page.scss
+++ b/src/pages/basket-page/basket-page.scss
@@ -25,4 +25,12 @@
       margin-bottom: 20px;
     }
   }
+
+  &__loading {
+    @include font-h4;
+    margin: 48px 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
