--- a/src/components/about-us/about-us.scss
+++ b/src/components/about-us/about-us.scss
@@ -231,4 +231,59 @@
       }
     }
   }
+
+  &-rsschool {
+    padding: 80px 64px;
+    margin-bottom: 104px;
+    display: flex;
+    align-items: center;
+    background: $color-bg-light;
+
+    @include pre-tablet {
+      flex-direction: column-reverse;
+    }
+
+    @include mobile {
+      padding: 40px 32px;
+      margin-bottom: 60px;
+    }
+
+    &__link {
+      display: block;
+      min-width: 220px;
+      height: 80px;
+      background-image: url('../../assets/icons/rsschool-icon.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+      transition: all 0.3s ease;
+
+      &:hover {
+        background-image: url('../../assets/icons/rsschool-icon-active.svg');
+      }
+
+      @include small-mobile {
+        min-width: 135px;
+        height: 50px;
+      }
+    }
+
+    &__text {
+      margin: 0 0 0 40px;
+      padding: 0 0 0 40px;
+      @include font-h2;
+      border-left: 1.5px solid rgba($color-primary, 0.12);
+
+      @include pre-tablet {
+        margin: 0 0 40px 0;
+        padding: 0 0 40px 0;
+        border-left: none;
+        border-bottom: 1.5px solid rgba($color-primary, 0.12);
+      }
+
+      @include small-mobile {
+        text-align: center;
+      }
+    }
+  }
 }
