--- a/src/components/basket-empty/basket-empty.scss
+++ b/src/components/basket-empty/basket-empty.scss
@@ -1,20 +1,33 @@
-.basket-section {
+.basket-empty {
+  margin-bottom: 80px;
+
+  &__container {
+    @include container;
+  }
+
   &__content {
-    &_empty {
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      gap: 12px;
-      padding: 80px 20px;
-      text-align: center;
-      background-color: $color-bg-light;
-      border-radius: 8px;
-    }
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 12px;
+    padding: 80px 20px;
+    text-align: center;
+    background-color: $color-bg-light;
+    border-radius: 8px;
   }
 
   &__icon {
     width: 40px;
     height: 40px;
     background: url('../../assets/icons/bag-icon.svg') center/cover;
+  }
+
+  &__title {
+    @include font-h4;
+  }
+
+  &__subtitle {
+    margin-bottom: 20px;
   }
 }
