--- a/src/components/basket-items/basket-items.scss
+++ b/src/components/basket-items/basket-items.scss
@@ -1,4 +1,10 @@
 .basket-items {
+  margin-bottom: 80px;
+
+  &__container {
+    @include container;
+  }
+
   &__table {
     width: 100%;
     border-collapse: collapse;
@@ -27,8 +33,13 @@
     }
 
     &-td {
-      padding: 24px 0;
+      padding: 24px 16px 24px 0;
       border-bottom: 1px solid $color-border;
+
+      &--remove {
+        padding-right: 0;
+        width: 80px;
+      }
     }
 
     &-row:last-child .basket-items__table-td {
@@ -63,6 +74,79 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+    }
+  }
+
+  &__prices {
+    display: flex;
+    align-items: center;
+    gap: 6px;
+    flex-wrap: wrap;
+  }
+
+  &__price {
+    color: $color-primary;
+
+    &--old {
+      text-decoration: line-through;
+      color: $color-secondary-40;
+    }
+
+    &--new {
+      color: $color-error;
+    }
+  }
+
+  // TODO: Replace with a separate component which will be implemented in ISSUE #127.
+  &__quantity {
+    width: 107px;
+    height: 43px;
+    border-radius: 6px;
+    background: $color-bg-light;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font: $font-button;
+  }
+
+  &__remove {
+    background: transparent;
+    color: $color-primary;
+    position: relative;
+    display: flex;
+    align-items: center;
+    gap: 2px;
+    opacity: 0.6;
+    padding: 0;
+    width: 80px;
+
+    &-icon {
+      width: 15px;
+      height: 15px;
+      background-image: url('../../assets/icons/popup-close-icon.svg');
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      height: 1px;
+      background: $color-secondary-60;
+      left: 0;
+      bottom: -4px;
+      transition: width 0.2s ease-in-out;
+    }
+
+    &:hover,
+    &:active {
+      background: transparent !important;
+
+      &::after {
+        width: 0;
+      }
     }
   }
 }
