--- a/src/components/basket-items/basket-items.scss
+++ b/src/components/basket-items/basket-items.scss
@@ -1,5 +1,5 @@
 .basket-items {
-  margin-bottom: 80px;
+  margin-bottom: 60px;
 
   &__container {
     @include container;
@@ -16,14 +16,24 @@
       line-height: 120%;
       letter-spacing: 1.1px;
       text-transform: uppercase;
+
+      @include tablet {
+        display: none;
+      }
     }
 
     &-body {
       font: $font-label;
       text-transform: capitalize;
+    }
 
-      &-row:last-child .basket-items__table-td {
-        border: none;
+    &-row {
+      @include tablet {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+        flex-wrap: wrap;
+        border-bottom: 1px solid $color-border;
       }
     }
 
@@ -36,9 +46,57 @@
       padding: 24px 16px 24px 0;
       border-bottom: 1px solid $color-border;
 
+      &--price,
+      &--total-price {
+        min-width: 100px;
+
+        @include mobile {
+          width: 100%;
+        }
+      }
+
+      &--price {
+        @include mobile {
+          &::before {
+            content: 'Price   ';
+          }
+        }
+      }
+
+      &--total-price {
+        @include mobile {
+          &::before {
+            content: 'Total   ';
+          }
+        }
+      }
+
+      &--quantity {
+        @include mobile {
+          width: 100%;
+        }
+      }
+
       &--remove {
         padding-right: 0;
         width: 80px;
+
+        @include tablet {
+          order: -1;
+          margin-left: auto;
+        }
+
+        @include mobile {
+          width: 24px;
+        }
+      }
+
+      @include tablet {
+        border: none;
+      }
+
+      @include mobile {
+        padding: 12px 0;
       }
     }
 
@@ -51,6 +109,15 @@
     display: flex;
     align-items: center;
     gap: 20px;
+
+    @include tablet {
+      width: 85%;
+      order: -2;
+    }
+
+    @include mobile {
+      width: 70%;
+    }
   }
 
   &__image {
@@ -60,6 +127,10 @@
       background: $color-bg-secondary;
       border-radius: 8px;
       overflow: hidden;
+
+      @include mobile {
+        height: auto;
+      }
     }
 
     img {
@@ -71,7 +142,7 @@
 
     &--placeholder {
       background-image: url('../../assets/img/placeholder-image.svg');
-      background-position: center;
+      background-position: center center;
       background-repeat: no-repeat;
       background-size: cover;
     }
@@ -82,6 +153,10 @@
     align-items: center;
     gap: 6px;
     flex-wrap: wrap;
+
+    @include mobile {
+      display: inline-flex;
+    }
   }
 
   &__price {
@@ -107,6 +182,10 @@
     align-items: center;
     justify-content: center;
     font: $font-button;
+
+    @include mobile {
+      width: 100%;
+    }
   }
 
   &__remove {
@@ -120,6 +199,10 @@
     padding: 0;
     width: 80px;
 
+    @include mobile {
+      width: 24px;
+    }
+
     &-icon {
       width: 15px;
       height: 15px;
@@ -127,6 +210,17 @@
       background-position: center;
       background-repeat: no-repeat;
       background-size: cover;
+
+      @include mobile {
+        width: 24px;
+        height: 24px;
+      }
+    }
+
+    span {
+      @include mobile {
+        display: none;
+      }
     }
 
     &::after {
@@ -138,6 +232,10 @@
       left: 0;
       bottom: -4px;
       transition: width 0.2s ease-in-out;
+
+      @include mobile {
+        display: none;
+      }
     }
 
     &:hover,
