feat: connect quantity elements with cartStore

--- a/src/components/basket-items/basket-items.scss
+++ b/src/components/basket-items/basket-items.scss
@@ -185,6 +185,11 @@
     @include mobile {
       width: 100%;
     }
+
+    &--disabled {
+      pointer-events: none;
+      opacity: 0.5;
+    }
   }
 
   &__remove {
