--- a/src/components/header/header-user/header-user.scss
+++ b/src/components/header/header-user/header-user.scss
@@ -16,18 +16,19 @@
     cursor: pointer;
 
     &:hover > .user-account__title {
-      opacity: 1;
+      opacity: 0.6;
     }
 
     .user-account {
       &__title {
-        opacity: 0.5;
+        opacity: 1;
         user-select: none;
         cursor: unset;
         max-width: 150px;
         white-space: nowrap;
         text-overflow: ellipsis;
         overflow: hidden;
+        transition: opacity 0.2s ease;
 
         @include tablet {
           display: none;
@@ -100,6 +101,7 @@
         height: 25px;
         width: 25px;
         background-color: $color-gray;
+        color: $color-primary;
         border-radius: 100%;
         pointer-events: none;
 
